# repo-proyecto-final-2025

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
producción/: __init__.py  dataset.py  features.py  plots.py
producción/modeling/: predict.py  train.py
